--- a/package.json
+++ b/package.json
@@ -1,28 +1,56 @@
 {
-  "name": "center-modal",
-  "private": true,
+  "name": "centered-modal",
   "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "author": "shivam puri",
+  "main": "build/index.js",
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@babel/core": "^7.18.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.3.1",
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.8.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "vite": "^5.4.0"
-  }
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.24.7",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
+    "webpack-cli": "^4.10.0"
+  },
+  "scripts": {
+    "build": "webpack"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shivam-puri/react-nested-modals.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/shivam-puri/react-nested-modals/issues"
+  },
+  "homepage": "https://github.com/shivam-puri/react-nested-modals#readme",
+  "description": ""
 }
